<resources>
    <string name="app_name">TripTP</string>
    <string name="facebook_app_id">1425318657511217</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="probar">Try it</string>

    <string name="buscar_cercanos">Nearby</string>
    <string name="acciones">Actions</string>
    <string name="cercanoTitle">Nearby attractions</string>
    <string name="atracciones">Attractions</string>
    <string name="atraccion">Attraction</string>
    <string name="recorridos">Tours</string>
    <string name="recorrido">Tour</string>
    <string name="ciudades">Cities</string>
    <string name="ubicarme">Where am I?</string>
    <string name="favoritos">Favorites</string>
    <string name="visitados">Visits</string>
    <string name="informacion">Info</string>
    <string name="videos">Video</string>
    <string name="fotos">Pictures</string>
    <string name="audio">Audio</string>
    <string name="plano">Plan</string>
    <string name="pais">Country: </string>
    <string name="clasificacion">Classification: </string>
    <string name="costo">Cost: </string>
    <string name="moneda">Currency: </string>
    <string name="apertura">Opening time: </string>
    <string name="cierre">Close time: </string>
    <string name="duracion">Duration: </string>
    <string name="rating">Rating: </string>
    <string name="votos">Votes: </string>
    <string name="logout">Logout</string>
    <string name="config">Configuration</string>
    <string name="add_social">Add social network</string>
    <string name="login">Login</string>
    <string name="link_fail">Association fail.</string>
    <string name="link_succes">Association succes.</string>
    <string name="radio">Search radius</string>
    <string name="noPlano">There is no plan to show.</string>
    <string name="noAudio">There is no audio to show.</string>
    <string name="noVideo">There is no video to show.</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="interest">Interest</string>
    <string name="review">Comment</string>
    <string name="comment_succes">Successful review.</string>
    <string name="comment_fail">Fail review.</string>
    <string name="share_dialog">¿Share in social networks?</string>
    <string name="share_accounts_dialog">¿Share in all social networks?</string>
    <string name="make_review">Make a review.</string>
    <string name="share_button">Share</string>
    <string name="share_hear_button">Share hear</string>
    <string name="share_all_button">Share all</string>
    <string name="ok">OK</string>
    <string name="rate">Rate attraction:</string>
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">Accept</string>
    <string name="banned">You are banned.</string>
    <string name="banned_alert">You are banned, cannot make reviews.</string>
    <string name="login_alert">You are not logged, cannot make reviews.</string>
    <string name="no_comment_alert">Be the first to review.</string>
    <string name="add_favorite">Add to favorites.</string>
    <string name="rem_favorite">Remove from favorites.</string>
    <string name="fav_post_err">Cannot save favorites at the moment, try later.</string>
    <string name="fav_post_succ">Favorite save!.</string>
    <string name="back">Back</string>
    <string name="mapa">Map</string>
    <string name="addToFavs">Added to Favorites.</string>
    <string name="addToVisit">Added to Visits.</string>
    <string name="please_wait">Please wait…</string>


</resources>
